--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
+<md-toolbar color="primary">
+	<span>
+		<button md-icon-button [md-menu-trigger-for]="menu">
+			<md-icon>more_vert</md-icon>
+		</button>
+	</span>
+
+	<md-menu #menu="mdMenu">
+		<a [routerLink]="['/']">Home</a>
+		<a [routerLink]="['/pokemon']">List des pokemons</a>
+	</md-menu>
+</md-toolbar>
+
+
 <router-outlet></router-outlet>
-<h1>
-  {{title}}
-</h1>
