--- a/src/app/Pokemon/pokemon_list.component.html
+++ b/src/app/Pokemon/pokemon_list.component.html
@@ -1,1 +1,6 @@
 <h1>{{ title }}</h1>
+
+<div *ngFor="let pokemon of pokemons">
+	<h1>{{ pokemon.name }}</h1>
+	<a ng-href="/pokemon/{{ pokemon.id }}">View</a>
+</div>
