--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+md-card.pokemon-card md-card-content h2 {
+	text-transform: capitalize;
+}
